--- a/index.html
+++ b/index.html
@@ -20,12 +20,8 @@
         <main class="row">
             <div class="col">
                 <h1>CSV to HTML Table</h1>
-
-                <p>Display any CSV file as a searchable, filterable, pretty HTML table. Done in 100% JavaScript. <a
-                        href="https://github.com/derekeder/csv-to-html-table">Code
-                        on GitHub</a>.</p>
-
-                <p> Index of data files used in Intro Stats, 7th edition. 
+                
+                <p> Datasets Used in Intro Stats, 7th Edition
                 </p>
 
                 <div id="table-container"></div>
