--- a/index.html
+++ b/index.html
@@ -20,9 +20,13 @@
         <main class="row">
             <div class="col">
                 <h1>CSV to HTML Table</h1>
-                
+
+
                 <p> Datasets Used in Intro Stats, 7th Edition
                 </p>
+
+                                <p> To download a tab-delimited .txt file suitable for importing into statistical software, click the link to the uploaded .txt file in the dataset’s folder, then click the download icon in the upper right corner menu. 
+                </p> 
 
                 <div id="table-container"></div>
             </div>
