--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
         <main class="row">
             <div class="col">
-                <h1>CSV to HTML Table</h1>
+                <h1>Intro Stats, 7e</h1>
 
 
                 <p> Datasets Used in Intro Stats, 7th Edition
