--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <h1>Intro Stats, 7e</h1>
 
 
-                <p> Datasets Used in Intro Stats, 7th Edition
+                <p> The index below includes all datasets used in the 7th edition of Intro Stats (De Veaux, Velleman, Bock). 
                 </p>
 
                                 <p> To download a tab-delimited .txt file suitable for importing into statistical software, click the link to the uploaded .txt file in the dataset’s folder, then click the download icon in the upper right corner menu. 
