--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         CsvToHtmlTable.init({
             csv_path: "data_index.csv",
             element: "table-container",
-            allow_download: true,
+            allow_download: false,
             csv_options: {
                 separator: ",",
                 delimiter: '"'
