Updated data index file

--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                 paging: false
             },
             custom_formatting: [
-                [9, format_link]
+                [9, format_link], 
+		[10, format_link]
             ]
         });
     </script>
