Added pagination to html

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 delimiter: '"'
             },
             datatables_options: {
-                paging: false
+                paging: true
             },
             custom_formatting: [[6, format_link], [7, format_link]]
         });
